<resources>
    <string name="app_name">Mult.io</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="singleplayer">"Single Player"</string>
    <string name="multiplayer">"Multiplayer"</string>
    <string name="time_trial">"Time Trial"</string>
    <string name="save_user">"Save User"</string>
    <string name="campaign">"Campaign"</string>
    <string name="custom">"Custom"</string>

    <string name="enter_problems">"Enter the number of problems"</string>
    <string name="enter_problems_hint">"# of problems"</string>
    <string name="currency">"Currency:"</string>

    <string name="enter">"Enter"</string>
    <string name="logout">Logout</string>
    <string name="view_profile">"View Profile"</string>

    <!-- TODO: DEBUG STRINGS -->
    <string name="endgame">"See Endgame"</string>


</resources>
